# coffee-snobbery

./: .dockerignore  .env.example  .gitignore  .gitignore.placeholder.bak  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  snobbery-gsd-prompt.md  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/debug/: ci-pytest-red-16-fails.md  edit-coffee-buttons-dead.md  guided-brew-does-nothing.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: __init__.py  config.py  csrf.py  db.py  events.py  logging.py  logging_config.py  main.py  rate_limit.py  signing.py  templates_setup.py
app/dependencies/: __init__.py  auth.py  db.py
app/middleware/: __init__.py  fragment_cache.py  request_context.py  security_headers.py  session.py
app/migrations/: env.py
app/models/: __init__.py  ai_coffee_research_cache.py  ai_rating_prediction.py  ai_recommendation.py  api_credential.py  app_setting.py  bag.py  base.py  brew_draft.py  brew_session.py  cafe_log.py  coffee.py  coffee_origin.py  equipment.py  flavor_note.py  recipe.py  roaster.py  session.py  user.py  varietal.py  water_profile.py  wishlist_entry.py
app/routers/: __init__.py  admin.py  ai.py  auth.py  bags.py  brew.py  brew_guided.py  cafe_logs.py  coffees.py  config_hub.py  csp_report.py  debug.py  equipment.py  flavor_notes.py  home.py  photos.py  pwa.py  recipes.py  roasters.py  search.py  water_profiles.py
app/schemas/: __init__.py  admin_user.py  auth.py  bag.py  brew_csv.py  brew_session.py  cafe_log.py  coffee.py  debug.py  equipment.py  flavor_note.py  recipe.py  roaster.py  water_profile.py
app/services/: __init__.py  ai_quota.py  ai_research.py  ai_schemas.py  ai_service.py  analytics.py  auth.py  backup.py  bags.py  brew_drafts.py  brew_sessions.py  cafe_logs.py  charts.py  coffees.py  credentials.py  csv_io.py  encryption.py  equipment.py  flavor_notes.py  form_validation.py  photos.py  recipes.py  roasters.py  scheduler.py  search.py  sessions.py  settings.py  setup.py  varietals.py  water_profiles.py  wishlist.py
app/templates/: admin_base.html  base.html
docs/: DEPLOY.md
docs/decisions/: 0001-csp-strict-no-unsafe-eval.md  0002-pure-asgi-middleware.md  0003-event-taxonomy-d14-amendment.md  0004-trim-research-result-card.md
scripts/: check_c4_dark.py  generate_pwa_icons.py
tests/: conftest.py  test_backup.py  test_brew_flavor_sync.py  test_c4_dark_checker.py  test_catalog_edit_form_layout.py  test_coffee_origins.py  test_dist07_banner.py  test_env_example.py  test_freshness_removal.py  test_happy_path_smoke.py  test_healthz.py  test_lifespan_phase3.py  test_logging.py  test_migrations.py  test_nav.py  test_no_direct_env.py  test_phase02_smoke.py  test_phase20_brew_session.py  test_phase20_mobile.py  test_phase20_step_schema.py  test_phase20_water_profiles.py  test_pwa.py  test_pwa_icons.py  test_roast_level_enum.py  test_scheduler.py  test_search.py  test_varietals.py
tests/ci/: test_csp_nonce.py  test_no_credential_dump.py  test_no_unsafe_jinja.py
tests/dependencies/: test_auth.py
tests/docs/: test_readme_nginx.py
tests/e2e/: __init__.py  conftest.py  test_responsive_smoke.py
tests/middleware/: test_csrf.py  test_csrf_form_shim.py  test_fragment_cache.py  test_logging.py  test_security_headers.py  test_session.py  test_unauthorized_redirect.py
tests/migrations/: test_cafe_logs_migration.py
tests/phase_04/: conftest.py  test_autocomplete.py  test_coffee_filters.py  test_migration.py  test_models_catalog.py  test_routers_bags.py  test_routers_coffees.py  test_routers_equipment.py  test_routers_flavor_notes.py  test_routers_photos.py  test_routers_recipes.py  test_routers_roasters.py  test_schemas_form_validation.py  test_services_photos.py  test_services_recipes.py
tests/phase_09/: conftest.py  test_admin_backups.py  test_admin_credentials.py  test_admin_security.py  test_admin_settings.py  test_admin_system.py  test_admin_users.py
tests/routers/: test_admin.py  test_admin_settings.py  test_ai_charts.py  test_ai_improve.py  (+12 more)
(+644 files in other folders)
