# Snobbery — household coffee log.
# Tool configs only at Phase 0: ruff (format + lint), mypy, pytest.
# CI YAML (GitHub Actions) is deferred to Phase 12 per CONTEXT §Deferred.

[project]
name = "coffee-snobbery"
version = "0.1.0"
description = "Self-hosted household coffee log for pour-over enthusiasts."
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
# Defaults: double quotes, trailing comma in multi-line collections, etc.

[tool.ruff.lint]
extend-select = ["E", "F", "I", "B", "UP", "S"]
# CONTEXT D-19 ruff rule set. `S` is bandit; combined with `B` (bugbear), `UP`
# (pyupgrade) and `I` (isort) plus the pycodestyle/pyflakes defaults this is the
# baseline Phase 12 will tighten.

[tool.ruff.lint.per-file-ignores]
# Test files routinely use `assert` (S101) and may hard-code credentials in
# fixtures (S105/S106) — these are not security smells in the test domain.
# S110: try-except-pass is intentional in e2e fixtures (bag creation can fail on
# a pre-seeded stack; the test gracefully skips).
# S310: urllib.request to a localhost test target is not an SSRF risk.
# S608: cleanup fixtures build DELETE statements from test-only constants, not user input.
"tests/**/*.py" = ["S101", "S105", "S106", "S110", "S310", "S608"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short"
# Phase 12: -x removed so the ship gate surfaces ALL failures at once.
# Pass -x explicitly on the CLI for fast dev one-shots (e.g. pytest -x tests/).
# Phase 1 Plan 01 (Wave 0): warning policy.
#
# The plan text proposed `filterwarnings = ["error"]` (treat all warnings as
# errors). Deferred to Wave 1 — turning it on at the conftest-only stage
# crashes pytest's collection in the host environment when pytest-asyncio is
# absent (pytest issues a `PytestConfigWarning: Unknown config option:
# asyncio_mode`, which `error` promotes to an INTERNALERROR halting all
# collection). The acceptance criteria for this plan only require
# `asyncio_mode = "auto"` + `testpaths = ["tests"]` and clean collection — both
# satisfied without the filterwarnings escalation. Plan 02 (which lands
# structlog redaction in a way that's exercised under Docker only) is the
# correct seat to flip strict warnings on, since by then `pytest-asyncio` is
# guaranteed-installed via `requirements-dev.txt` in every environment that
# runs the suite. Recorded as a deviation in the Plan 01-01 SUMMARY.
# Test dependency policy (Wave 0): Phase 0 ships dev deps via `requirements-dev.txt`
# (see file for the pytest>=9,<10 / pytest-asyncio / httpx pins). We intentionally
# do NOT duplicate them under `[project.optional-dependencies] test = [...]` —
# the requirements-dev.txt file is the single source of truth per Phase 0's
# convention, and the Dockerfile installs from it. Re-pinning here risks drift.
